--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,10 +1,19 @@
 {
   "manifest_version": 3,
   "name": "TruthGuard AI",
-  "version": "1.0",
+  "version": "1.1",
   "description": "An AI-powered context engine to analyze news credibility.",
-  "permissions": ["activeTab", "scripting"],
-  "host_permissions": ["http://127.0.0.1:8000/*"],
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "contextMenus" 
+  ],
+  "host_permissions": [
+    "http://127.0.0.1:8000/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icons/icon16.png"
